--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-flag-icons": "^1.5.9",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-loading": "^2.0.3",
