--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react-dom": "^18.2.18",
     "country-flag-icons": "^1.5.9",
     "graphql": "^16.8.1",
+    "i18next": "^23.8.2",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "react-icons": "^5.0.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.22.0",
