--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.9.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.79",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-testing": "^4.0.0",
     "dotenv": "^16.4.1"
   }
 }
